index overflow main-nav fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -442,7 +442,9 @@ h1 {
         position: absolute;
         top: 9rem;
         justify-content: center;
-        width: 100%;
+        left: -50%;
+        right: -50%;
+        max-width: 70%;
 
     }
 
